# trajectories_processors_lib

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md  deps.repos  package.xml
.github/workflows/: build_and_install.yaml  build_and_install_within_catkin.yaml  build_and_install_within_catkin_vcstool.yaml  clang-format.yaml  github_workflow_trajectories_processors_lib_install.sh  github_workflow_trajectories_processors_lib_install_within_catkin.sh
cmake_config/: Dependencies.cmake  clang_format_target.sh  trajectories_processors_libConfig.cmake  trajectories_processors_libConfig.cmake.in
include/openmore/trajectories_processors/: spline_trajectory_processor.h  trajectory_processor_base.h
include/trajectories_processors_lib/: spline_trajectory_processor.h  trajectory_processor_base.h
src/: spline_trajectory_processor.cpp  trajectory_processor_base.cpp
