<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>trajectories_processors_lib</name>
<version>0.0.0</version>
<description>The trajectories_processors_lib package</description>

<maintainer email="c.tonola001@unibs.it">cesare</maintainer>

<license>TODO</license>

<buildtool_depend>cmake</buildtool_depend>

<depend>cnr_logger</depend>
<depend>cnr_param</depend>
<!--  <depend>cnr_class_loader</depend>-->

<export>
<build_type>cmake</build_type>
</export>

</package>
