<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectories_processors_lib</name>
  <version>0.0.0</version>
  <description>The trajectories_processors_lib package</description>

  <maintainer email="c.tonola001@unibs.it">Cesare Tonola</maintainer>

  <license>BSD3-Clause</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION != 1">cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>cnr_logger</depend>
  <depend>cnr_param</depend>

  <export>
      <build_type condition="$ROS_VERSION == 1">catkin</build_type>
      <build_type condition="$ROS_VERSION != 1">cmake</build_type>
  </export>

</package>
